--- a/2-随笔.md
+++ b/2-随笔.md
@@ -1,9 +1,20 @@
-<font size=3>
-
-[toc]
+<font face="微软雅黑" size=2>
 
 ## 随笔
-
+- [随笔](#随笔)
+  - [1、图像映射和CSS Sprites](#1图像映射和css-sprites)
+  - [2、null和空字符串""的区别](#2null和空字符串的区别)
+  - [3、axios数据请求](#3axios数据请求)
+  - [4、vue-cli脚手架目录](#4vue-cli脚手架目录)
+  - [5、views和conponents的区别](#5views和conponents的区别)
+  - [6、vue规范相关](#6vue规范相关)
+  - [7、router-link-active 与 router-link-exact-active 区别](#7router-link-active-与-router-link-exact-active-区别)
+  - [8、字体引入方法](#8字体引入方法)
+  - [9、插入svg图片](#9插入svg图片)
+  - [10、上传图片](#10上传图片)
+  - [11、下载图片](#11下载图片)
+  - [12、http](#12http)
+  - [13、CSS文字溢出省略](#13css文字溢出省略)
 ### 1、图像映射和CSS Sprites
 给图片部分位置或组图添加超链接，比分离图片的超链接性能好，更多内容参考MDN：[Sprites](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS)、[图像映射](https://developer.mozilla.org/zh-CN/docs/learn/HTML/Howto/Add_a_hit_map_on_top_of_an_image)。
 
@@ -171,7 +182,7 @@ var app = new Vue({
 - 7.FileReader对象的readAsDataURL方法可以将读取到的文件编码成Data URL。
 
 **css**
-```
+``` 
 .item_bock {
   display: flex;
   align-items: center;
@@ -208,8 +219,30 @@ var app = new Vue({
   height: 37px;
 }
 ```
+### 11、下载图片
+```html
+<el-dialog :title="title" :visible.sync="openfile" width="500px" append-to-body>
+  <el-form ref="form1" :model="form1" :rules="rules">
+    <img :src="form1.img"  style="width: 100%;height: 90%;" id="imageWrapper" />
+    <el-button type="primary" @click="handleDown()" style="width: 100%;">下载图片</el-button>
+  </el-form>
+</el-dialog> 
+```
 
-### 11、http
+```js
+handleDown(){
+  let link = document.createElement('a')
+  let url =  this.form1.img  
+  // 这里是将url转成blob地址，
+  fetch(url).then(res => res.blob()).then(blob => { // 将链接地址字符内容转变成blob地址
+    link.href = URL.createObjectURL(blob)
+    link.download = 'pic'
+    document.body.appendChild(link)
+    link.click()
+  })
+},
+```
+### 12、http
 <strong>URL：统一资源标识符</strong>，如：http://news.qq.com/a/20160209/012154.htm?a=1&b=2&c=3
 
 - url组成：protocol、hostname、port、path、parameters
@@ -249,3 +282,19 @@ var app = new Vue({
 POST不能被GET取代的原因：
 1. GET与POST都有自己的语义，不能随便混用
 2. 在网络环境好的情况下，发一次包的时间和发两次包的时间差别基本可以无视。而在网络环境差的情况下，两次包的TCP在验证数据包完整性上，有非常大的优点。
+
+### 13、CSS文字溢出省略
+- 单行：
+```css
+text-overflow: ellipsis;
+overflow:hidden;
+white-space:nowrap;
+```
+- 多行：
+```css
+text-overflow: ellipsis;
+overflow : hidden;
+display: -webkit-box;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+```     
