--- a/6-每日一题整理.md
+++ b/6-每日一题整理.md
@@ -1,5 +1,11 @@
 <font face="微软雅黑" size="2">
 
+## 每日一题整理
+- [每日一题整理](#每日一题整理)
+  - [day1](#day1)
+  - [1. 输出是什么？](#1-输出是什么)
+  - [2. 输出是什么？](#2-输出是什么)
+### day1
 ### 1. 输出是什么？
 ```js
 for (var i = 0; i < 3; i++) {
