--- a/6-每日一题整理.md
+++ b/6-每日一题整理.md
@@ -5,6 +5,7 @@
   - [day1](#day1)
   - [1. 输出是什么？](#1-输出是什么)
   - [2. 输出是什么？](#2-输出是什么)
+  - [3. 输出是什么？](#3-输出是什么)
 ### day1
 ### 1. 输出是什么？
 ```js
@@ -49,6 +50,30 @@ shape.perimeter()
 
 对于箭头函数，`this` 关键字指向的是它当前周围作用域（简单来说是包含箭头函数的常规函数，如果没有常规函数的话就是全局对象），这个行为和常规函数不同。这意味着当我们调用 `perimeter` 时，`this` 不是指向 `shape` 对象，而是它的周围作用域（在例子中是 `window`）。
 
-在 `window` 中没有 `radius` 这个属性，因此返回 `undefined`。
+在 `window` 中没有 `radius` 这个属性，因此返回 `undefined`。<hr>
+### 3. 输出是什么？
+```js
+class Chameleon {
+  static colorChange(newColor) {
+    this.newColor = newColor
+    return this.newColor
+  }
+
+  constructor({ newColor = 'green' } = {}) {
+    this.newColor = newColor
+  }
+}
+
+const freddie = new Chameleon({ newColor: 'purple' })
+freddie.colorChange('orange')
+```
+- A: orange
+- B: purple
+- C: green
+- D: TypeError
+
+**答案: D**
+`colorChange` 是一个静态方法。静态方法被设计为只能被创建它们的构造器使用（也就是 `Chameleon`），并且不能传递给实例。因为 `freddie` 是一个实例，静态方法不能被实例使用，因此抛出了 `TypeError` 错误。<hr>
+
 
 来源：https://github.com/lydiahallie/javascript-questions/blob/master/zh-CN/README-zh_CN.md
