--- a/1-学习笔记/6-每日一题整理/6-每日一题.md
+++ b/1-学习笔记/6-每日一题整理/6-每日一题.md
@@ -1,5 +1,6 @@
 <font face="微软雅黑" size="2">
 
+来源：https://github.com/lydiahallie/javascript-questions/blob/master/zh-CN/README-zh_CN.md
 ## 每日一题
 - [每日一题](#每日一题)
   - [day1](#day1)
@@ -11,8 +12,9 @@
     - [4. 输出是什么？](#4-输出是什么)
     - [5. 输出是什么？](#5-输出是什么)
   - [day4](#day4)
-    - [6. 输出是什么？](#6-输出是什么)
+    - [6.输出是什么？](#6输出是什么)
     - [7. 输出是什么？](#7-输出是什么)
+    - [8. 输出是什么？](#8-输出是什么)
 ### day1
 #### 1. 输出是什么？
 ```js
@@ -137,7 +139,28 @@ console.log(sarah)
 我们说 `this.firstName` 等于 `"Sarah"`，并且 `this.lastName` 等于 `"Smith"`。实际上我们做的是，定义了 `global.firstName = 'Sarah'` 和 `global.lastName = 'Smith'`。而 `sarah` 本身是 `undefined`。<br>
 
 ### day4
-#### 6. 输出是什么？
+#### 6.输出是什么？
+```js
+function getPersonInfo(one, two, three) {
+  console.log(one)
+  console.log(two)
+  console.log(three)
+}
+
+const person = 'Lydia'
+const age = 21
+
+getPersonInfo`${person} is ${age} years old`
+```
+- A: "Lydia" 21 ["", " is ", " years old"]
+- B: ["", " is ", " years old"] "Lydia" 21
+- C: "Lydia" ["", " is ", " years old"] 21
+
+**答案：B**
+
+如果使用标记模板字面量，第一个参数的值总是包含字符串的数组。其余的参数获取的是传递的表达式的值！<br>
+
+#### 7. 输出是什么？
 ```js
 function checkAge(data) {
   if (data === { age: 18 }) {
@@ -164,7 +187,7 @@ checkAge({ age: 18 })
 
 这也是 `{ age: 18 } === { age: 18 }` 和 `{ age: 18 } == { age: 18 }` 都返回 `false`  的原因。<br>
 
-#### 7. 输出是什么？
+#### 8. 输出是什么？
 ```js
 function getAge(...args) {
   console.log(typeof args)
@@ -179,8 +202,6 @@ getAge(21)
 
 **答案: C**
 
-扩展运算符（`...args`）会返回实参组成的数组。而数组是对象，因此 `typeof args` 返回 `"object"`。
+扩展运算符（`...args`）会返回实参组成的数组。而数组是对象，因此 `typeof args` 返回 `"object"`。<br>
 
 
-
-来源：https://github.com/lydiahallie/javascript-questions/blob/master/zh-CN/README-zh_CN.md
