--- a/2-随笔.md
+++ b/2-随笔.md
@@ -306,6 +306,8 @@ function findScroller(element) {
   element.onscroll = function() {
     console.log(element);
   }
-  Array.from(elemtn.children).forEach(findScroller)
+  Array.from(element.children).forEach(findScroller)
 }
+
+findScroller(document.body);
 ```
