--- a/2-随笔.md
+++ b/2-随笔.md
@@ -16,6 +16,7 @@
   - [12、http](#12http)
   - [13、CSS文字溢出省略](#13css文字溢出省略)
   - [14、监听产生滚动的元素](#14监听产生滚动的元素)
+  - [15、处理相对时间](#15处理相对时间)
 ### 1、图像映射和CSS Sprites
 给图片部分位置或组图添加超链接，比分离图片的超链接性能好，更多内容参考MDN：[Sprites](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS)、[图像映射](https://developer.mozilla.org/zh-CN/docs/learn/HTML/Howto/Add_a_hit_map_on_top_of_an_image)。
 
@@ -311,3 +312,8 @@ function findScroller(element) {
 
 findScroller(document.body);
 ```
+
+### 15、处理相对时间
+**第三方库:**
+- Moment.js
+- Day.js
