--- a/2-随笔.md
+++ b/2-随笔.md
@@ -17,6 +17,10 @@
   - [13、CSS文字溢出省略](#13css文字溢出省略)
   - [14、监听产生滚动的元素](#14监听产生滚动的元素)
   - [15、处理相对时间](#15处理相对时间)
+  - [16、lodash工具库](#16lodash工具库)
+  - [17、json-bigint 第三方包](#17json-bigint-第三方包)
+  - [18、cropperjs库](#18cropperjs库)
+  - [19、关于接口参数类型](#19关于接口参数类型)
 ### 1、图像映射和CSS Sprites
 给图片部分位置或组图添加超链接，比分离图片的超链接性能好，更多内容参考MDN：[Sprites](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS)、[图像映射](https://developer.mozilla.org/zh-CN/docs/learn/HTML/Howto/Add_a_hit_map_on_top_of_an_image)。
 
@@ -317,3 +321,54 @@ findScroller(document.body);
 **第三方库:**
 - Moment.js
 - Day.js
+
+### 16、lodash工具库
+
+`debounce(func, [wait=0],[options={}])`
+
+创建一个 `debounced`（防抖动）函数，该函数会从上一次被调用后，延迟 `wait` 毫秒后调用 `func` 方法。 `debounced`（防抖动）函数提供一个 `cancel` 方法取消延迟的函数调用以及 `flush` 方法立即调用。 可以提供一个 `options`（选项） 对象决定如何调用 `func` 方法，`options.leading` 与|或 `options.trailing` 决定延迟前后如何触发（注：是 先调用后等待 还是 先等待后调用）。 `func` 调用时会传入最后一次提供给 `debounced`（防抖动）函数 的参数。 后续调用的 `debounced`（防抖动）函数返回是最后一次 `func` 调用的结果。
+
+### 17、json-bigint 第三方包
+- 处理数据中超出JS安全范围导致数据不准确的问题
+```js
+import JSONBig from 'json-bigint'
+// JSONBig.parse()：把 JSON 格式的字符串转化为JS对象
+// JSONBig.stringify()：把JS对象转化为JSON格式的字符串
+
+let jsonStr =  '{"art_id": 12345678901234567}'
+console.log(JSONBig.parse(jsonStr).art_id.toString())   //12345678901234567
+```
+
+### 18、cropperjs库
+js下都可以使用的图片裁切库
+
+```js
+import 'cropperjs/dist/cropper.css';
+import Cropper from 'cropperjs';
+```
+```html
+<div>
+  <img ref="img" class="img" :src="img">
+</div> 
+```
+```js
+//移动端裁切配置
+mounted () {
+    const image = this.$refs.img;
+    const cropper = new Cropper(image, {
+      viewMode: 1, // 裁剪框的范围 0可以拖出区域，1只能在画布中拖动
+      dragMode: 'move', // 拖动模式
+      aspectRatio: 1, // 裁切比例
+      autoCropArea: 1, // 自动裁切尺寸 1代表最大
+      cropBoxMovable: false, // 截图区域是否可以移动
+      cropBoxResizable: false, // 截图区域是否可以缩放
+      background: false, // 背景
+      movable: true // 背景是否可以移动默认为true
+    });
+    console.log(cropper);
+  },
+```
+
+### 19、关于接口参数类型
+- 如果接口要求 Content-Type 是 application/json，则传递普通 JavaScript 对象
+- 如果接口要求 Content-Type 是 multipart/form-data，则必须传递 FormData 对象
