--- a/2-随笔.md
+++ b/2-随笔.md
@@ -372,3 +372,11 @@ mounted () {
 ### 19、关于接口参数类型
 - 如果接口要求 Content-Type 是 application/json，则传递普通 JavaScript 对象
 - 如果接口要求 Content-Type 是 multipart/form-data，则必须传递 FormData 对象
+
+```js
+const formData = new FormData();
+
+// Pass the image file name as the third parameter if necessary.
+formData.append('croppedImage', blob/*, 'example.png' */);
+
+```
