--- a/2-随笔.md
+++ b/2-随笔.md
@@ -21,6 +21,14 @@
   - [17、json-bigint 第三方包](#17json-bigint-第三方包)
   - [18、cropperjs库](#18cropperjs库)
   - [19、关于接口参数类型](#19关于接口参数类型)
+  - [20.防抖](#20防抖)
+  - [21.css三角形](#21css三角形)
+  - [22.移动端css初始化库](#22移动端css初始化库)
+  - [22.移动端技术选型*](#22移动端技术选型)
+  - [23.嵌套块元素塌陷-外边距合并](#23嵌套块元素塌陷-外边距合并)
+  - [24.media媒体查询引入css资源](#24media媒体查询引入css资源)
+  - [25.rem适配方案库](#25rem适配方案库)
+  - [26.清除浮动](#26清除浮动)
 ### 1、图像映射和CSS Sprites
 给图片部分位置或组图添加超链接，比分离图片的超链接性能好，更多内容参考MDN：[Sprites](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS)、[图像映射](https://developer.mozilla.org/zh-CN/docs/learn/HTML/Howto/Add_a_hit_map_on_top_of_an_image)。
 
@@ -253,9 +261,9 @@ handleDown(){
 
 - url组成：protocol、hostname、port、path、parameters
 - protocol：协议。协议就是一套规则，定义了数据的封装、打包、拆包和解释的规则  	http://
-- hostname：主机名。可以将主机理解为一台名叫 news.qq.com 的机器，这台主机在 qq.com域名下。
+- hostname：主机名/域名。可以将主机理解为一台名叫 news.qq.com 的机器，这台主机在 qq.com域名下。
 - post：端口号。默认80，如：http://news.qq.com:8080/的端口号为8080
-- path：路径。最终文件所在的路径和文件名，文件存储在服务器上.../a/20160209/012154.htm/...
+- path：路径。最终文件所在的路径和文件名，文件存储在服务器上.../a/20160209/012154.html/...
 - parameters：查询、参数，如：a=1&b=2&c=3
 
 <strong>GET和POST区别：原因：HTTP的规定和浏览器/服务器的限制，导致GET和POST有如下区别：</strong>
@@ -292,16 +300,22 @@ POST不能被GET取代的原因：
 ### 13、CSS文字溢出省略
 - 单行：
 ```css
-text-overflow: ellipsis;
-overflow:hidden;
+/* 不换行 */
 white-space:nowrap;
+/* 超出隐藏 */
+overflow:hidden;
+/* 省略号代替超出内容 */
+text-overflow: ellipsis;
 ```
 - 多行：
 ```css
-text-overflow: ellipsis;
 overflow : hidden;
+text-overflow: ellipsis;
+/* 弹性伸缩盒子模型显示 */
 display: -webkit-box;
+/* 限制在一个块元素的文本行数 */
 -webkit-line-clamp: 2;
+/* 设置或检索伸缩盒对象的子元素的排列方式 */
 -webkit-box-orient: vertical;
 ```     
 
@@ -378,5 +392,176 @@ const formData = new FormData();
 
 // Pass the image file name as the third parameter if necessary.
 formData.append('croppedImage', blob/*, 'example.png' */);
+
+```
+
+### 20.防抖
+**防抖（debounce）**：将多次高频操作优化为只在最后一次操作执行。
+>当事件被触发后，延迟n秒后再执行回调，如果在延迟期间再次触发事件，则重新计时。
+
+使用场景：用户输入（模糊搜索）
+```js
+//防抖方法
+//两个参数：fn函数（我们需要执行的操作）、delay（时间）
+const debouned = (fn, delay) =>{
+	//判断window上的times是否有值
+    if (window.times){
+    	//有值就清除（相当于终止了上次的setTimeout）
+        clearTimeout(window.times)
+    }
+    //重新开启定时器
+    window.times = setTimeout(() => {
+    	//执行我们对应的操作
+        fn()
+    }, delay)
+}
+//调用防抖方法
+debouned( () => {
+	console.log('防抖')
+}, 500 )
+```
+**节流**：每隔一段时间后执行一次，也就是降低频率，将高频操作优化成低频操作
+使用场景：滚动事件、resize事件
+```js
+//节流方法
+let timer, flag;
+//三个参数：第二个和第三个可选
+const throttle = (func, wait = 3000, immediate = true) => {
+	if (immediate) {
+		if (!flag) {
+			flag = true;
+			// 如果是立即执行，则在wait毫秒内开始时执行
+			typeof func === 'function' && func();
+			timer = setTimeout(() => {
+				flag = false;
+			}, wait);
+			
+		}
+	} else {
+		if (!flag) {
+			flag = true
+			// 如果是非立即执行，则在wait毫秒内的结束处执行
+			timer = setTimeout(() => {
+				flag = false
+				typeof func === 'function' && func();
+			}, wait);
+		}
+		
+	}
+};
+throttle( () => {
+console.log('节流')
+} )
+
+```
+> 转自：winged Victory<br>
+> 链接：https://blog.csdn.net/m0_53538943/article/details/118229174
+
+### 21.css三角形
+1.斜边三角形
+```html
+<div class="box"><div>
+```
+```css
+.box {
+  width: 0;
+  height: 0;
+  border-top: 100px solid transparent;
+  border-right: 100px solid blue;
+  border-bottom: 100px solid transparent;;
+  border-left: 100px solid transparent;
+}
+```
+2.直角三角形
+```html
+<div class="box"><div>
+```
+```css
+.box {
+  width: 0;
+  height: 0;
+  border-top: 100px solid transparent;
+  border-right: 100px solid blue;
+  border-bottom: 0 solid skyblue;
+  border-left: 100px solid transparent;
+}
+```
+
+### 22.移动端css初始化库
+**normalize.css**
+
+- 移动端样式解决方案
+```css
+/* CSS3盒子模型 */
+box-sizing: border-box;
+-webkit-box-sizing: border-box;
+/* 清除点击高亮 设置为transparent透明 */
+-webkit-tap-highlight-color: transparent;
+/* 去除移动端按钮和输入框的样式 */
+-webkit-appearance: none;
+/* 禁用长按页面弹出菜单 */
+img,a {
+  -webkit-touch-callout: none;
+}
+```
+
+### 22.移动端技术选型*
+1. 单独制作移动端页面*
+- 流式布局（百分比布局）
+- flex 弹性布局（*）
+- less + rem + 媒体查询布局
+- 混合布局
+
+2. 响应式页面兼容移动端
+- 媒体查询
+- bootstarp
+
+### 23.嵌套块元素塌陷-外边距合并
+解决方案：
+1. 给父元素添加上边框
+2. 给父元素定义内边距
+3. 给父元素添加`overflow:hidden`
+ 
+参考：https://www.jianshu.com/p/4473bffef8a0
+
+### 24.media媒体查询引入css资源 
+```css
+<link rel="stylesheet" href="1.css" media="screen and (min-width: 320px)">
+
+<link rel="stylesheet" href="1.css" media="screen and (min-width: 640px)">
+```
+
+### 25.rem适配方案库
+`fleible.js`
+
+### 26.清除浮动
+1. :after 伪元素法
+```css
+.clearfix:after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.clearfix {   /* 兼容IE6、7 */
+  *zoom: 1;
+}
+
+```  
+2. 双伪元素法
+```css
+.clearfix:before,.clearfix:after {
+  content: "";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+.clearfix {
+  *zoom: 1;
+}
 
 ```
