--- a/2-知识点整理.md
+++ b/2-知识点整理.md
@@ -1,7 +1,7 @@
 <font face="微软雅黑" size=2>
 
-## 随笔
-- [随笔](#随笔)
+## 知识点整理
+- [知识点整理](#知识点整理)
   - [1、图像映射和CSS Sprites](#1图像映射和css-sprites)
   - [2、null和空字符串""的区别](#2null和空字符串的区别)
   - [3、axios数据请求](#3axios数据请求)
