--- a/2-知识点整理.md
+++ b/2-知识点整理.md
@@ -21,7 +21,7 @@
   - [17、json-bigint 第三方包](#17json-bigint-第三方包)
   - [18、cropperjs库](#18cropperjs库)
   - [19、关于接口参数类型](#19关于接口参数类型)
-  - [20.防抖](#20防抖)
+  - [20.防抖和节流](#20防抖和节流)
   - [21.css三角形](#21css三角形)
   - [22.移动端css初始化库](#22移动端css初始化库)
   - [22.移动端技术选型*](#22移动端技术选型)
@@ -30,6 +30,9 @@
   - [25.rem适配方案库](#25rem适配方案库)
   - [26.清除浮动](#26清除浮动)
   - [27. 当你在浏览器中输入 Google.com 并且按下回车之后发生了什么？](#27-当你在浏览器中输入-googlecom-并且按下回车之后发生了什么)
+  - [28. 图片懒加载](#28-图片懒加载)
+  - [29. 点击按钮回到顶部](#29-点击按钮回到顶部)
+  - [30.数字金额转化为中文金额](#30数字金额转化为中文金额)
 ### 1、图像映射和CSS Sprites
 给图片部分位置或组图添加超链接，比分离图片的超链接性能好，更多内容参考MDN：[Sprites](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS)、[图像映射](https://developer.mozilla.org/zh-CN/docs/learn/HTML/Howto/Add_a_hit_map_on_top_of_an_image)。
 
@@ -396,7 +399,8 @@ formData.append('croppedImage', blob/*, 'example.png' */);
 
 ```
 
-### 20.防抖
+### 20.防抖和节流
+> https://segmentfault.com/a/1190000018428170/
 **防抖（debounce）**：将多次高频操作优化为只在最后一次操作执行。
 >当事件被触发后，延迟n秒后再执行回调，如果在延迟期间再次触发事件，则重新计时。
 
@@ -458,6 +462,40 @@ console.log('节流')
 > 转自：winged Victory<br>
 > 链接：https://blog.csdn.net/m0_53538943/article/details/118229174
 
+练习：
+```js
+// test
+// 防抖
+let input = document.querySelector('.input');
+let timer;
+function debounce() {
+  clearInterval(timer);
+  timer = setTimeout(() => {
+    console.log('hello world');
+  },500);
+}
+input.onkeydown = () => debounce();
+```
+
+```js
+// test
+// 节流
+function throttle() {
+  let isListen = true;
+  window.addEventListener('scroll', lazyLoad);
+  window.addEventListener('resize', lazyLoad);
+  function lazyLoad() {
+    if (!isListen) return;
+    isListen = false;
+    setTimeout(() => {
+      console.log(window.pageYOffset);
+      console.log(window.innerHeight);
+      isListen = true;
+    }, 300)
+  }
+}
+throttle();
+```
 ### 21.css三角形
 1.斜边三角形
 ```html
@@ -602,4 +640,111 @@ img,a {
 来进行布局。布局完成后，最后使用浏览器的 UI 接口对页面进行绘制。这个时候整个页面就显示出来了。
 
 （9）最后一步是 TCP 断开连接的四次挥手过程。
+```
+
+> 其他参考：https://github.com/skyline75489/what-happens-when-zh_CN/blob/master/README.rst?utm_medium=social&utm_source=wechat_session&from=timeline&isappinstalled=0
+
+### 28. 图片懒加载
+监控浏览器的 scroll 事件，并且要计算图片与浏览器窗口的距离来选择替换图片的 src 地址。
+```js
+// HTML
+<div>
+  <img class="lazy-load" data-src="https://source.unsplash.com/random/600" alt="">
+  <img class="lazy-load" data-src="https://source.unsplash.com/random/700" alt="">
+  <img class="lazy-load" data-src="https://source.unsplash.com/random/800" alt="">
+  <img class="lazy-load" data-src="https://source.unsplash.com/random/900" alt="">
+</div>
+// 引入 lodash 库
+<script src="https://cdn.bootcss.com/lodash.js/4.17.12-pre/lodash.core.min.js"></script>
+```  
+
+```css
+/* CSS */
+div {
+  margin-top: 350px;
+}
+.lazy-load {
+  width: 200px;
+  height: 150px;
+}
+```
+
+```js
+// JS
+let lazyImages = [...document.querySelectorAll('.lazy-load')]
+let inAdvance = 300
+function lazyLoad() {
+    lazyImages.forEach(image => {
+        if (image.offsetTop < window.innerHeight + window.pageYOffset + inAdvance) {
+            image.src = image.dataset.src;   // 替换真实图片的  URL
+        }
+    })
+}
+lazyLoad();
+window.addEventListener('scroll', _.throttle(lazyLoad, 50))
+window.addEventListener('resize', _.throttle(lazyLoad, 50))
+```
+
+这其中有几个属性，首先是 `data-src`，它是自定义属性，可以在 js 里通过 `dataset` 获得它的属性值；还有 `offsetTop` ,`innerHeight` 以及 `pageYOffset` 属性，你可以通过 MDN 文档查询他们的定义和用法；最后是 `_.throttle` 函数，它是一个节流函数，引用自 `lodash` 库，因为监听 `scroll` 滚动以及 `resize` 窗口改变事件会不断地触发，过于频繁，所以使用节流函数让其每隔一段时间执行，节省开销。
+
+> offsetTop：当前对象到其上级层顶部的距离。<br>
+> innerHeight：浏览器窗口的视口（viewport）高度（以像素为单位）；如果有水平滚动条，也包括滚动条高度。<br>
+> pageYOffset 属性是 scrollY 属性的别名:返回文档在垂直方向已滚动的像素值。<br> 
+> 为了跨浏览器兼容，请使用 window.pageYOffset 代替 window.scrollY。<br>
+> getBoundingClientRect()//获取元素的大小及其相对视口位置。如getBoundingClientRect().top表示元素距离视口顶部的距离<br>
+> 作者：一个学前端的码农<br>
+> 链接：https://www.jianshu.com/p/c0f8cc330653
+
+### 29. 点击按钮回到顶部
+> 来源：https://www.cnblogs.com/jin-zhe/p/10506509.html
+```html
+<body style="height:2000px;">
+  <button id="test" style="position:fixed;right:20px;bottom:20px">回到顶部</button>
+
+<script>
+　　test.onclick = function(){
+      let timer = setInterval(() => {
+        if(document.documentElement.scrollTop <= 0){
+          clearInterval(timer);
+          console.log('finished');
+        }
+        else if(document.documentElement.scrollTop <= 300) {
+          document.body.scrollTop = document.documentElement.scrollTop -= 20;  
+        }
+        else{
+          document.body.scrollTop = document.documentElement.scrollTop -= 100;  
+        }
+      }, 10);
+　　}
+</script>
+</body>
+```
+### 30.数字金额转化为中文金额
+```js
+function numToString(num) {
+  if(num > 999999999999) throw '超过金额上限，最大单位为千亿'
+  const unitMap = ['','十','百','千','万','十','百','千','亿','十','百','千'];
+  const stringMap = ['零', '一', '二', '三', '四', '五', '六', '七', '八', '九'];
+  const numStr = num + '';
+  let len = numStr.length;  //数字长度
+  let lastIndex = len-1;  //最后一个数字的单位的索引
+  let result = '';
+  for(let i = 0; i < len; i++) {
+    if (i < len-1 && numStr[i] == '0') {
+      if(i === len- 9) {
+        result += '亿';
+      } else if (i === len - 5) {
+        result += '万';
+      } else if(numStr[i + 1] !== '0') {
+        result += '零';
+      }   
+    } else {
+      result += stringMap[numStr[i]] + unitMap[lastIndex];
+    }
+    lastIndex--;  
+  }
+  if(result[result.length-1] === '零') return result.slice(0,result.length-1);
+  return result;
+}
+console.log(numToString(102034506709));
 ```
