--- a/2-知识点整理.md
+++ b/2-知识点整理.md
@@ -21,18 +21,20 @@
   - [17、json-bigint 第三方包](#17json-bigint-第三方包)
   - [18、cropperjs库](#18cropperjs库)
   - [19、关于接口参数类型](#19关于接口参数类型)
-  - [20.防抖和节流](#20防抖和节流)
-  - [21.css三角形](#21css三角形)
-  - [22.移动端css初始化库](#22移动端css初始化库)
-  - [22.移动端技术选型*](#22移动端技术选型)
-  - [23.嵌套块元素塌陷-外边距合并](#23嵌套块元素塌陷-外边距合并)
-  - [24.media媒体查询引入css资源](#24media媒体查询引入css资源)
-  - [25.rem适配方案库](#25rem适配方案库)
-  - [26.清除浮动](#26清除浮动)
-  - [27. 当你在浏览器中输入 Google.com 并且按下回车之后发生了什么？](#27-当你在浏览器中输入-googlecom-并且按下回车之后发生了什么)
-  - [28. 图片懒加载](#28-图片懒加载)
-  - [29. 点击按钮回到顶部](#29-点击按钮回到顶部)
-  - [30.数字金额转化为中文金额](#30数字金额转化为中文金额)
+  - [20、防抖和节流](#20防抖和节流)
+  - [21、css三角形](#21css三角形)
+  - [22、移动端css初始化库](#22移动端css初始化库)
+  - [23、移动端技术选型*](#23移动端技术选型)
+  - [24、嵌套块元素塌陷-外边距合并](#24嵌套块元素塌陷-外边距合并)
+  - [25、media媒体查询引入css资源](#25media媒体查询引入css资源)
+  - [26、rem适配方案库](#26rem适配方案库)
+  - [27、清除浮动](#27清除浮动)
+  - [28、图片懒加载](#28图片懒加载)
+  - [29、点击按钮回到顶部](#29点击按钮回到顶部)
+  - [30、数字金额转化为中文金额](#30数字金额转化为中文金额)
+  - [31、div垂直body居中、div内的text垂直居中，div高度等于body宽度的一半(padding百分比等于父级元素宽度的占比)](#31div垂直body居中div内的text垂直居中div高度等于body宽度的一半padding百分比等于父级元素宽度的占比)
+  - [32、BFC(block formatting context):块级格式化上下文](#32bfcblock-formatting-context块级格式化上下文)
+  - [33、vue钩子函数](#33vue钩子函数)
 ### 1、图像映射和CSS Sprites
 给图片部分位置或组图添加超链接，比分离图片的超链接性能好，更多内容参考MDN：[Sprites](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS)、[图像映射](https://developer.mozilla.org/zh-CN/docs/learn/HTML/Howto/Add_a_hit_map_on_top_of_an_image)。
 
@@ -399,32 +401,31 @@ formData.append('croppedImage', blob/*, 'example.png' */);
 
 ```
 
-### 20.防抖和节流
+### 20、防抖和节流
 > https://segmentfault.com/a/1190000018428170/
 **防抖（debounce）**：将多次高频操作优化为只在最后一次操作执行。
 >当事件被触发后，延迟n秒后再执行回调，如果在延迟期间再次触发事件，则重新计时。
 
 使用场景：用户输入（模糊搜索）
 ```js
-//防抖方法
-//两个参数：fn函数（我们需要执行的操作）、delay（时间）
-const debouned = (fn, delay) =>{
-	//判断window上的times是否有值
-    if (window.times){
-    	//有值就清除（相当于终止了上次的setTimeout）
-        clearTimeout(window.times)
-    }
-    //重新开启定时器
-    window.times = setTimeout(() => {
-    	//执行我们对应的操作
-        fn()
-    }, delay)
+function debounce(fn,delay) {
+  let timeout = null; // 创建一个标记用来存放定时器的返回值
+  return function () {
+    clearTimeout(timeout); // 每当用户输入的时候把前一个 setTimeout clear 掉
+    timeout = setTimeout(() => { // 然后又创建一个新的 setTimeout, 这样就能保证输入字符后的 interval 间隔内如果还有字符输入的话，就不会执行 fn 函数
+      fn.apply(this, arguments);
+    }, delay);
+  };
 }
-//调用防抖方法
-debouned( () => {
-	console.log('防抖')
-}, 500 )
+function sayHi() {
+  console.log('防抖成功');
+}
+
+var inp = document.getElementById('inp');
+inp.addEventListener('input', debounce(sayHi,500)); // 防抖
 ```
+
+
 **节流**：每隔一段时间后执行一次，也就是降低频率，将高频操作优化成低频操作
 使用场景：滚动事件、resize事件
 ```js
@@ -466,49 +467,71 @@ console.log('节流')
 ```js
 // test
 // 防抖
+<body>
+  <input class="input" type="text">
+</body>
+<script>
 let input = document.querySelector('.input');
-let timer;
-function debounce() {
-  clearInterval(timer);
-  timer = setTimeout(() => {
-    console.log('hello world');
-  },500);
+function debounce(fn, delay) {
+  let timer = null; 
+  return function () {
+    clearTimeout(timer);
+    timer = setTimeout(() => {
+      fn.apply(this, arguments);
+    }, 500);
+  }
 }
-input.onkeydown = () => debounce();
+
+function sayHi() {
+  console.log('hello world!');
+}
+
+input.oninput = debounce(sayHi,500);
+</script>
 ```
 
 ```js
 // test
 // 节流
-function throttle() {
-  let isListen = true;
-  window.addEventListener('scroll', lazyLoad);
-  window.addEventListener('resize', lazyLoad);
-  function lazyLoad() {
-    if (!isListen) return;
-    isListen = false;
-    setTimeout(() => {
-      console.log(window.pageYOffset);
-      console.log(window.innerHeight);
-      isListen = true;
-    }, 300)
+  function throttle(fn, delay) {
+    let wait = false;
+    return function () {
+      if (wait) return;
+      wait = true;
+      setTimeout(() => {
+        fn.apply(this, arguments);
+        wait = false;
+      }, delay)
+    }
   }
-}
-throttle();
+  function loading() {
+    //内容顶部到视口顶部的距离(屏幕以上a)
+    let scrollTop = document.documentElement.scrollTop;   
+    //元素顶部到内容顶部的距离（最大高度a+b）
+    let offsetTop = document.getElementById('div').offsetTop; 
+    //视口的高度(屏幕高度b)
+    let clientHeight = document.documentElement.clientHeight;  
+    // console.log(scrollTop,offsetTop,clientHeight);
+    if (scrollTop + clientHeight + 300 > offsetTop) {
+      console.log('节流成功');
+    }
+  }
+  window.addEventListener('scroll', throttle(loading, 1000))
+  window.addEventListener('resize', throttle(loading, 1000))
 ```
-### 21.css三角形
+### 21、css三角形
 1.斜边三角形
 ```html
 <div class="box"><div>
 ```
 ```css
 .box {
-  width: 0;
-  height: 0;
-  border-top: 100px solid transparent;
-  border-right: 100px solid blue;
-  border-bottom: 100px solid transparent;;
-  border-left: 100px solid transparent;
+  position: relative;
+}
+.box::after {
+  content:'';
+  border: 10px solid transparent;
+  border-top-color: red;
 }
 ```
 2.直角三角形
@@ -517,16 +540,21 @@ throttle();
 ```
 ```css
 .box {
-  width: 0;
-  height: 0;
-  border-top: 100px solid transparent;
-  border-right: 100px solid blue;
-  border-bottom: 0 solid skyblue;
-  border-left: 100px solid transparent;
+  position: relative;
+}
+.box::after {
+  content: '';
+  border: 5px solid red;
+  border-width: 10px 5px;
+  border-right-color: #2c8ac2;
+  border-bottom: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 ```
 
-### 22.移动端css初始化库
+### 22、移动端css初始化库
 **normalize.css**
 
 - 移动端样式解决方案
@@ -544,7 +572,7 @@ img,a {
 }
 ```
 
-### 22.移动端技术选型*
+### 23、移动端技术选型*
 1. 单独制作移动端页面*
 - 流式布局（百分比布局）
 - flex 弹性布局（*）
@@ -555,7 +583,7 @@ img,a {
 - 媒体查询
 - bootstarp
 
-### 23.嵌套块元素塌陷-外边距合并
+### 24、嵌套块元素塌陷-外边距合并
 解决方案：
 1. 给父元素添加上边框
 2. 给父元素定义内边距
@@ -563,17 +591,17 @@ img,a {
  
 参考：https://www.jianshu.com/p/4473bffef8a0
 
-### 24.media媒体查询引入css资源 
+### 25、media媒体查询引入css资源 
 ```css
 <link rel="stylesheet" href="1.css" media="screen and (min-width: 320px)">
 
 <link rel="stylesheet" href="1.css" media="screen and (min-width: 640px)">
 ```
 
-### 25.rem适配方案库
+### 26、rem适配方案库
 `fleible.js`
 
-### 26.清除浮动
+### 27、清除浮动
 1. :after 伪元素法
 ```css
 .clearfix:after {
@@ -604,47 +632,7 @@ img,a {
 }
 
 ```
-
-### 27. 当你在浏览器中输入 Google.com 并且按下回车之后发生了什么？
-```
-（1）首先会对 URL 进行解析，分析所需要使用的传输协议和请求的资源的路径。如果输入的 URL 中的协议或者主机名不合法，将会把地址栏中输入
-的内容传递给搜索引擎。如果没有问题，浏览器会检查 URL 中是否出现了非法字符，如果存在非法字符，则对非法字符进行转义后再进行下一过程。
-
-（2）浏览器会判断所请求的资源是否在缓存里，如果请求的资源在缓存里并且没有失效，那么就直接使用，否则向服务器发起新的请求。
-
-（3）下一步我们首先需要获取的是输入的 URL 中的域名的 IP 地址，首先会判断本地是否有该域名的 IP 地址的缓存，如果有则使用，如果没有则向
-本地 DNS服务器发起请求。本地 DNS 服务器也会先检查是否存在缓存，如果没有就会先向根名服务器发起请求，获得负责的顶级域名服务器的地址后，再
-向顶级域名服务器请求，然后获得负责的权威域名服务器的地址后，再向权威域名服务器发起请求，最终获得域名的 IP 地址后，本地 DNS 服务器再将
-这个 IP 地址返回给请求的用户。用户向本地 DNS 服务器发起请求属于递归请求，本地 DNS 服务器向各级域名服务器发起请求属于迭代请求。
-
-（4）当浏览器得到 IP 地址后，数据传输还需要知道目的主机 MAC 地址，因为应用层下发数据给传输层，TCP 协议会指定源端口号和目的端口号，然后下
-发给网络层。网络层会将本机地址作为源地址，获取的 IP 地址作为目的地址。然后将下发给数据链路层，数据链路层的发送需要加入通信双方的 MAC地址，
-我们本机的 MAC 地址作为源 MAC 地址，目的 MAC 地址需要分情况处理，通过将 IP 地址与我们本机的子网掩码相与，我们可以判断我们是否与请求主机
-在同一个子网里，如果在同一个子网里，我们可以使用 APR 协议获取到目的主机的 MAC 地址，如果我们不在一个子网里，那么我们的请求应该转发给我们
-的网关，由它代为转发，此时同样可以通过 ARP 协议来获取网关的 MAC 地址，此时目的主机的 MAC 地址应该为网关的地址。
-
-（5）下面是 TCP 建立连接的三次握手的过程，首先客户端向服务器发送一个 SYN 连接请求报文段和一个随机序号，服务端接收到请求后向服务器端发送
-一个SYN ACK报文段，确认连接请求，并且也向客户端发送一个随机序号。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一
-个 ACK 确认报文段，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。
-
-（6）如果使用的是 HTTPS 协议，在通信前还存在 TLS 的一个四次握手的过程。首先由客户端向服务器端发送使用的协议的版本号、一个随机数和可以使
-用的加密方法。服务器端收到后，确认加密的方法，也向客户端发送一个随机数和自己的数字证书。客户端收到后，首先检查数字证书是否有效，如果有效，
-则再生成一个随机数，并使用证书中的公钥对随机数加密，然后发送给服务器端，并且还会提供一个前面所有内容的 hash 值供服务器端检验。服务器端接
-收后，使用自己的私钥对数据解密，同时向客户端发送一个前面所有内容的 hash 值供客户端检验。这个时候双方都有了三个随机数，按照之前所约定的加
-密方法，使用这三个随机数生成一把秘钥，以后双方通信前，就使用这个秘钥对数据进行加密后再传输。
-
-（7）当页面请求发送到服务器端后，服务器端会返回一个 html 文件作为响应，浏览器接收到响应后，开始对 html 文件进行解析，开始页面的渲染过程。
-
-（8）浏览器首先会根据 html 文件构建 DOM 树，根据解析到的 css 文件构建 CSSOM 树，如果遇到 script 标签，则判端是否含有 defer 或者 async 
-属性，要不然 script 的加载和执行会造成页面的渲染的阻塞。当 DOM 树和 CSSOM 树建立好后，根据它们来构建渲染树。渲染树构建好后，会根据渲染树
-来进行布局。布局完成后，最后使用浏览器的 UI 接口对页面进行绘制。这个时候整个页面就显示出来了。
-
-（9）最后一步是 TCP 断开连接的四次挥手过程。
-```
-
-> 其他参考：https://github.com/skyline75489/what-happens-when-zh_CN/blob/master/README.rst?utm_medium=social&utm_source=wechat_session&from=timeline&isappinstalled=0
-
-### 28. 图片懒加载
+### 28、图片懒加载
 监控浏览器的 scroll 事件，并且要计算图片与浏览器窗口的距离来选择替换图片的 src 地址。
 ```js
 // HTML
@@ -695,7 +683,7 @@ window.addEventListener('resize', _.throttle(lazyLoad, 50))
 > 作者：一个学前端的码农<br>
 > 链接：https://www.jianshu.com/p/c0f8cc330653
 
-### 29. 点击按钮回到顶部
+### 29、点击按钮回到顶部
 > 来源：https://www.cnblogs.com/jin-zhe/p/10506509.html
 ```html
 <body style="height:2000px;">
@@ -719,7 +707,7 @@ window.addEventListener('resize', _.throttle(lazyLoad, 50))
 </script>
 </body>
 ```
-### 30.数字金额转化为中文金额
+### 30、数字金额转化为中文金额
 ```js
 function numToString(num) {
   if(num > 999999999999) throw '超过金额上限，最大单位为千亿'
@@ -748,3 +736,99 @@ function numToString(num) {
 }
 console.log(numToString(102034506709));
 ```
+
+### 31、div垂直body居中、div内的text垂直居中，div高度等于body宽度的一半(padding百分比等于父级元素宽度的占比)
+
+```html
+<div>
+  <p class="text">这里是文本信息</p>
+</div>
+```
+
+```css
+body {
+    height: 100vh;
+}
+body,
+div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+div {
+    width: 100%;
+    height: 0;
+    padding-bottom: 50%;
+    position: relative;
+    background: #ddd;
+}
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+```
+
+### 32、BFC(block formatting context):块级格式化上下文
+**1. 定义：** BFC是一个独立的渲染区域，只有Block-level box参与， 它规定了内部的Block-level Box如何布局，并且与这个区域外部毫不相干。
+
+> block-level box：display 属性为 block, list-item, table 的元素，会生成 block-level box。并且参与 block fomatting context；
+
+**2. BFC的布局规则**
+1. 内部的Box会在垂直方向，一个接一个地放置。
+2. Box垂直方向的距离由margin决定。属于同一个BFC的两个相邻Box的margin会发生重叠。
+3. 每个盒子（块盒与行盒）的margin box的左边，与包含块border box的左边相接触(对于从左往右的格式化，否则相反)。即使存在浮动也是如此。
+4. BFC的区域不会与float box重叠。
+5. BFC就是页面上的一个隔离的独立容器，容器里面的子元素不会影响到外面的元素。反之也如此。
+6. 计算BFC的高度时，浮动元素也参与计算。
+
+**3. 如何创建BFC：**
+1. float的值不是none
+2. position的值不是static或者relative（absolute、fixed）
+3. display的值是inline-block、table-cell、flex、table-caption或者inline-flex
+4. overflow的值不是visible（auto、hidden、scroll等）
+
+**4. BFC的作用:**
+1. 利用BFC避免margin重叠(可以不处理，重叠取两者外边框的较大值为共同外边框)
+2. 自适应两栏布局(可以固定浮动栏的宽度)
+```html
+<body>
+  <div class="left">left</div>
+  <div class="right">right</div>
+</body>
+```
+
+```css
+body {
+  width: 100%;
+  position: relative;
+} 
+.left {
+  width: 200px;
+  float:left;
+  background-color: #0cc;
+  text-align: center;
+  font-size: 16px;
+}
+.right {
+  overflow: hidden;
+  background-color: #ce3;
+  text-align: center;
+  font-size: 20px;
+}
+```
+
+3. 清除浮动
+
+当我们不给父节点设置高度，子节点设置浮动的时候，会发生高度塌陷，这个时候我们就要清除浮动。
+- 给父元素添加 `overflow: hidden` 属性
+> 注：`overflow: hidden` 会隐藏掉元素范围外的内容，优先用第26点的 `:after伪元素` 法和 `双伪元素法` 。
+
+### 33、vue钩子函数
+1. beforeCreate：实例初始化之后调用的函数，还未进行数据初始化。
+2. created：实例创建完成后调用的函数，这个时候实例的数据、方法等已经配置，但是挂载阶段还未开始
+3. beforeMount: 挂载开始之前调用的函数，render函数被调用，生成虚拟DOM，但此时的el还是源码中的vue指令。
+4. mounted: 挂载完成后调用的函数，el被vm.$el代替，真实DOM挂在完毕。
+5. beforeUpdate：数据更新时调用，数据已经更改，新的虚拟DOM生成，但还未和旧虚拟DOM对比打补丁。
+6. updated：虚拟 DOM 重新渲染和打补丁，DOM更新。
