--- a/前端解决方案汇总.md
+++ b/前端解决方案汇总.md
@@ -145,7 +145,7 @@ npm install svg-sprite-loader --save-dev（[--save和--save-dev区别）](https:
 [参考](https://blog.csdn.net/weixin_41941325/article/details/80764680)
 
 **html：**
-```
+```html
 <div id="app">
   <div class="item_bock head_p">
      <div class="head_img">
@@ -164,7 +164,7 @@ npm install svg-sprite-loader --save-dev（[--save和--save-dev区别）](https:
 - 2.真正打开本地文件的是input，但这里是将其隐藏的。
 - 
 **js：**
-```
+```js
 var app = new Vue({
   el: '#app',
   data: {
@@ -202,7 +202,7 @@ var app = new Vue({
 - 7.FileReader对象的readAsDataURL方法可以将读取到的文件编码成Data URL。
 
 **css**
-``` 
+```css 
 .item_bock {
   display: flex;
   align-items: center;
