--- a/前端解决方案汇总.md
+++ b/前端解决方案汇总.md
@@ -36,6 +36,7 @@
   - [32、BFC(block formatting context):块级格式化上下文](#32bfcblock-formatting-context块级格式化上下文)
   - [33、vue钩子函数](#33vue钩子函数)
   - [34、sheetjs-demo](#34sheetjs-demo)
+  - [35、exceljs导入导出实现](#35exceljs导入导出实现)
 ### 1、图像映射和CSS Sprites
 给图片部分位置或组图添加超链接，比分离图片的超链接性能好，更多内容参考MDN：[Sprites](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS)、[图像映射](https://developer.mozilla.org/zh-CN/docs/learn/HTML/Howto/Add_a_hit_map_on_top_of_an_image)。
 
@@ -902,4 +903,267 @@ function getShowTitle(key: string[], label: string[]) {
   })
   return obj
 }
+```
+
+### 34、exceljs导入导出实现
+```js
+
+// exceljs中文文档:https://github.com/exceljs/exceljs/blob/master/README_zh.md
+import ExcelJS, { Alignment } from 'exceljs';
+import dayjs from 'dayjs';
+import * as fs from 'file-saver';
+// 导入参数类型
+export interface importExcelType {
+  i?: number;
+  header: readonly any[];
+}
+
+// 导出参数类型
+export interface exportExcelType {
+  /**
+   * 数据
+   */
+  data: { [key: string]: any }[];
+  /**
+   * 文件名
+   */
+  name: string;
+  /**
+ * 工作表名
+ */
+  sheetName?: string;
+  /**
+   * 标题
+   */
+  title?: string;
+  /**
+   * 工作表保护密码
+   */
+  password?: string;
+  /**
+   * 表头字段
+   */
+  header: string[];
+  /**
+   * 表头字段对应中文
+   */
+  customHeader: string[];
+  /**
+   * 对齐方式
+   */
+  alignment?: Partial<Alignment>;
+  /**
+   * 合并单元格
+   */
+  mergeList?: mergeListType[]
+}
+
+
+export interface mergeListType {
+  startRow: number;
+  startColumn: number;
+  endRow: number;
+  endColumn: number;
+}
+// exceljs相关方法
+export class Excel {
+  blob?: Blob;
+  constructor(blob?: Blob) {
+    this.blob = blob;
+  }
+  /**
+   * @description: blob转ArrayBuffer（用于后续生成文件数据）
+   * @return {Promise<ArrayBuffer>} ArrayBuffer
+   */
+  private readFile() {
+    return new Promise<ArrayBuffer>((resolve, reject) => {
+      let reader = new FileReader();
+      if (!this.blob) {
+        reject('上传文件异常!');
+      } else {
+        reader.readAsArrayBuffer(this.blob);
+        reader.onload = (ev) => {
+          resolve(ev.target!.result as ArrayBuffer);
+        };
+      }
+
+    });
+  }
+  /**
+   * @description: 导入excel文件获取workbook（workbook属性方法参考exceljs文档）
+   * @return {Promise<ExcelJS.Workbook>} 
+   */
+  public async getWorkBook() {
+    let buffer = await this.readFile();
+    const workbook = new ExcelJS.Workbook();
+    return await workbook.xlsx.load(buffer);
+  }
+
+  /**
+   * @description: 获取第i张工作表
+   * @param {number} i 工作表序号
+   * @return {Promise<ExcelJS.Worksheet>} 返回第 i 个工作表
+   */
+  public async getWorkSheet(i: number = 0) {
+    const workbook = await this.getWorkBook();
+    return workbook.getWorksheet(i);
+  }
+
+
+  /**
+   * @description: 将 excel 第i张工作表的数据转为对象数据
+   * @param {number} i 工作表序号
+   * @param {string[]} header 表头字段数组
+   * @return {Promise<Record<string, any>[]>} 传入表头作为字段的对象数组(每个元素对象对应每一行)
+   */
+  public async importExcel(options: importExcelType) {
+    const { i = 1, header } = options;
+    const workbook = await this.getWorkBook();
+    const worksheet = workbook.getWorksheet(i);
+    // excel导入后的数组
+    const excelList: Record<string, (typeof header)[number]>[] = [];
+
+    worksheet.getSheetValues().filter(temp => !!temp?.length).forEach(item => {   // 移除空行
+      // 移除每行首个空元素
+      (item as string[]).shift();
+      // 定义临时对象存储每一行内容
+      let tempObj: Record<string, (typeof header)[number]> = {};
+      (item as string[]).forEach((item2, index2) => {
+        tempObj[header[index2]] = item2;
+      })
+      excelList.push(tempObj);
+    })
+    return excelList
+  }
+
+  /**
+   * @description: 导出excel，参数信息参考exceljs
+   * @param {*} data 数据
+   * @param {*} name 文件名
+   * @param {*} sheetName 工作表名
+   * @param {*} title 标题
+   * @param {*} header 表头字段
+   * @param {*} customHeader 表头字段对应中文
+   * @param {*} alignment 对齐方式
+   * @return {*}
+   */
+  public async exportExcel(options: exportExcelType): Promise<void> {
+    const { data, name, sheetName = 'sheet1', title = '', password = '', header, customHeader, alignment = { vertical: 'middle', horizontal: 'center' }, mergeList = [] } = options;
+    // 表头行序号
+    const headerRowId = !!title ? 2 : 1
+    // 创建工作簿
+    const workbook = new ExcelJS.Workbook();
+    workbook.creator = 'kk';
+    workbook.created = new Date();
+    // 添加sheet
+    const worksheet = workbook.addWorksheet(sheetName, { properties: { tabColor: { argb: 'FF00FF00' } } });
+    // 自动筛选器
+    worksheet.autoFilter = {
+      from: {
+        row: headerRowId,
+        column: 1
+      },
+      to: {
+        row: data.length,
+        column: header.length
+      }
+    }
+    // 设置列
+    const column: any[] = [];
+    header.forEach((item, index) => {
+      column.push({
+        header: customHeader[index],
+        key: item,
+        width: 25
+      })
+    })
+    worksheet.columns = column;
+    // 设置行并添加数据
+    worksheet.addRows(data);
+    // 设置行属性
+    worksheet.eachRow({ includeEmpty: true }, (row, rowNumber) => {
+      row.height = 20;
+    })
+    // 插入标题（拆成单独函数）
+    if (!!title) {
+      worksheet.spliceRows(1, 0, [title]);
+      worksheet.mergeCells(1, 1, 1, header.length);
+      // 调整标题样式
+      const titleRow = worksheet.getRow(1);
+      titleRow.height = 40;
+      titleRow.font = {
+        size: 20,
+        bold: true
+      }
+    }
+    // 所有单元格居中
+    for (let i = 1; i <= header.length; i++) {
+      // 获取每一列数据，再依次对齐
+      worksheet.getColumn(i).alignment = alignment;
+    }
+    // 给表头添加背景色(有标题传2，无标题传1)
+    let headerRow = worksheet.getRow(headerRowId);
+
+    // 通过 cell 设置背景色，更精准
+    headerRow.eachCell((cell) => {
+      cell.fill = {
+        type: 'pattern',
+        pattern: 'solid',
+        fgColor: { argb: 'dde0e7' },
+      }
+    })
+
+    // 合并单元格（拆出来单个函数）
+    mergeList.forEach(item => {
+      // 若无大标题，则行数为table数据所在行行数加1（表头）
+      // 若有大标题，则行数为table数据所在行行数加2（标题+表头）
+      const startRow = item.startRow + headerRowId;
+      const endRow = item.endRow + headerRowId;
+      worksheet.mergeCells(startRow, item.startColumn, endRow, item.endColumn);
+    })
+    console.log(workbook);
+
+
+    worksheet.views = [
+      { state: 'frozen', xSplit: 0, ySplit: headerRowId }
+    ];
+    if (!!password) {
+      await worksheet.protect(password, {
+        autoFilter: true,
+        selectLockedCells: false,
+      });
+    }
+
+    // 导出excel
+    workbook.xlsx.writeBuffer().then((data) => {
+      let blob = new Blob([data], { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
+      // 方式1
+	  const a = document.createElement('a');
+      a.href = URL.createObjectURL(blob);
+      a.download = name + dayjs().format('YYYYMMDDHHmmss') + '.xlsx';
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      window.URL.revokeObjectURL(a.href);
+	  // 方式2
+	  // fs.saveAs(blob, name + new Date().valueOf() + '.xlsx');
+    });
+  }
+  /**
+   * @description: 合并单元格数组
+   * @param {Partial} merge1 需要合并的行/列起始对象数组1，例：[{ startRow: 1, endRow: 1},{ startRow: 10, endRow: 10}]
+   * @param {Partial} merge2 需要合并的列/行起始对象数组2，例：[{ startColumn: 1, endColumn: 2 }]
+   * @return {*} mergeArr 合并后数组，例：[{ startRow: 1, endRow: 1, startColumn: 1, endColumn: 2},{ startRow: 10, endRow: 10, startColumn: 1, endColumn: 2}]
+   */
+  public merge(merge1: Partial<mergeListType>[], merge2: Partial<mergeListType>[]): mergeListType[] {
+    const mergeArr: any[] = [];
+    merge1.forEach(item1 => {
+      mergeArr.push(...merge2.map(item2 => {
+        return { ...item2, ...item1 };
+      }))
+    })
+    return mergeArr;
+  }
+}
+
 ```
