--- a/前端解决方案汇总.md
+++ b/前端解决方案汇总.md
@@ -1021,13 +1021,13 @@ export class Excel {
     const workbook = await this.getWorkBook();
     const worksheet = workbook.getWorksheet(i);
     // excel导入后的数组
-    const excelList: Record<string, (typeof header)[number]>[] = [];
+    const excelList: Record<(typeof header)[number], string>[] = [];
 
     worksheet.getSheetValues().filter(temp => !!temp?.length).forEach(item => {   // 移除空行
       // 移除每行首个空元素
       (item as string[]).shift();
       // 定义临时对象存储每一行内容
-      let tempObj: Record<string, (typeof header)[number]> = {};
+      let tempObj: Record<(typeof header)[number], string> = {};
       (item as string[]).forEach((item2, index2) => {
         tempObj[header[index2]] = item2;
       })
